# app/serializers/user_simple_serializer.rb
@@ -1,0 +1,10 @@
+require 'action_view'
+require 'action_view/helpers'
+include ActionView::Helpers::DateHelper
+class UserSimpleSerializer < ActiveModel::Serializer
+  attributes :id, :name, :created_at, :about
+
+  def created_at
+    time_ago_in_words(object.created_at) + " ago"
+  end
+end
